# FPGA_MNIST

./: .clang-format  .gitignore  .gitmodules  .travis.yaml  CMakeLists.txt  LICENSE  README.md  bootstrap.py  bootstrap.sh  main.yml  requirements.txt
python/EggNetExtension/EggNetExtension/: CMakeLists.txt  NNExtension.h  NNExtension.i  __init__.py  cconv.c  chelper.h  cpool.c  dbg.h  perfcheck.c  scratch.c
vivado/Software/: CMakeLists.txt  Dockerfile  Readme.md  build_with_docker.sh  dockcross-linux-armv7a  setup.py  zedboard_wrapper.hdf
vivado/Software/.metadata/: version.ini
vivado/Software/.metadata/.plugins/com.xilinx.sdk.hw.ui/: dialog_settings.xml
vivado/Software/.metadata/.plugins/org.eclipse.cdt.core/: EggDriver.1583240453494.pdom  dma-proxy.1576054498909.pdom  lsuio.1576078196432.pdom
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/: 3.snap
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/EggDriver/: .markers.snap
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/EggDriver/.indexes/: properties.index
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/EggDriver/org.eclipse.egit.core/: GitProjectData.properties
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/dma-proxy/: .markers.snap
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/dma-proxy/.indexes/: properties.index
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/dma-proxy/org.eclipse.egit.core/: GitProjectData.properties
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/lsuio/: .markers  .markers.snap
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/lsuio/.indexes/: properties.index
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/lsuio/org.eclipse.egit.core/: GitProjectData.properties
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/zedboard_wrapper_hw_platform_0/.indexes/: properties.index
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.projects/zedboard_wrapper_hw_platform_0/org.eclipse.egit.core/: GitProjectData.properties
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
vivado/Software/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
vivado/Software/.metadata/.plugins/org.eclipse.debug.core/.launches/: EggDriver.elf.launch  dma-proxy Debug.launch  lsuio.launch
vivado/Software/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
vivado/Software/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
vivado/Software/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
vivado/Software/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-qiivld9_32638/: node.properties
vivado/Software/.metadata/.plugins/org.eclipse.rse.ui/: dialog_settings.xml
vivado/Software/.metadata/.plugins/org.eclipse.tcf.debug/: peers.ini
vivado/Software/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
vivado/Software/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
vivado/Software/EggDriver/: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists_old.txt  README.md  setup.py  test.py
vivado/Software/EggDriver/lib/: EggNetDriverCore.py
vivado/Software/EggDriver/src/: EggNetDriverCore.py  attr.c  base.c  c_callback.h  callback.cpp  callback.h  dbg.h  egg_event_handler.cpp  egg_event_handler.h  eggdma.c  eggnet.c  eggnet.h  eggnet.i  eggnet_core.h  eggnet_minimal.c  eggnet_wrap.c  eggstatus.c  egguio.c  libuio.h  libuio_internal.h  main.c  setup.py
vivado/Software/EggNetDriver/Debug/: makefile
vivado/Software/EggNetDriver/Debug/src/: dma-proxy.d  eggnet.d  subdir.mk
vivado/Software/cmake/: xillinx-win-to-armv7-linux.cmake  zynq-linux.toolchain.cmake
vivado/Software/dma-proxy/: .cproject  .project
vivado/Software/dma-proxy/src/: dma-proxy-test.c
vivado/Software/eggnet/: CMakeLists.txt  CMakeLists_find_package.txt  EggNetDriverCore.py  base.c  dma-proxy.c  dma-proxy.h  eggdbg.c  eggdma.c  egghello.c  eggnet.c  eggnet.h  eggnet.i  eggnet_core.h  eggnet_wrap.c  eggstatus.c
vivado/Software/lsuio/: .cproject  .project
vivado/Software/lsuio/src/: lsuio.c
vivado/Software/pysetup/: python-versions.txt  requirements.txt
vivado/Software/sysroots/linux/lib/arm-linux-gnueabihf/: libaio.so.1  libdevmapper.so.1.02.1  libfuse.so.2  libglib-2.0.so.0  liblzo2.so.2  libntfs-3g.so.841  libparted.so.0  libpci.so.3.2.1  libprocps.so.0  libsystemd-daemon.so.0.0.10  libsystemd-login.so.0  libulockmgr.so.1.0.1  libusb-1.0.so.0.1.0
vivado/Software/sysroots/linux/usr/include/arm-linux-gnueabihf/: ffi.h  jconfig.h
vivado/Software/sysroots/linux/usr/include/arm-linux-gnueabihf/python3.4m/: pyconfig.h
vivado/Software/sysroots/plnx_arm-tcbootstrap/sysroot-providers/: libgcc-initial  virtual_arm-xilinx-linux-gnueabi-libc-initial
vivado/Software/sysroots/python3.6/include/python3.6m/: pyconfig.h
vivado/Software/webtalk/: sdk_webtalk.tcl  sdk_webtalk.wdm  usage_statistics_ext_sdk.html  usage_statistics_ext_sdk.xml  webtalk.jou  webtalk_11032.backup.jou
vivado/Software/zedboard_wrapper_hw_platform_0/: .project  zedboard_wrapper.bit
vivado/Software/zedboard_wrapper_hw_platform_0/drivers/DMA_to_BRAM_v1_0/data/: DMA_to_BRAM.mdd  DMA_to_BRAM.tcl
vivado/Software/zedboard_wrapper_hw_platform_0/drivers/DMA_to_BRAM_v1_0/src/: DMA_to_BRAM.c  DMA_to_BRAM.h  DMA_to_BRAM_selftest.c  Makefile
vivado/Software/zedboard_wrapper_hw_platform_0/drivers/EggNet_v1_0/data/: EggNet.mdd  EggNet.tcl
vivado/Software/zedboard_wrapper_hw_platform_0/drivers/EggNet_v1_0/src/: EggNet.c  EggNet.h  EggNet_selftest.c  Makefile
(+1152 files in other folders)
